[package]
name = "cargo-testjs"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
repository = "https://github.com/hajifkd/cargo-testjs"
keywords = ["emscripten", "javascript", "test"]
license-file = "LICENSE"
readme = "README.md"
description = "Cargo extension to run tests by nodejs"

[dependencies]
toml = "*"
rustc-serialize = "*"
serde_derive = "*"
serde = "*"
regex = "*"
ansi_term = "*"
