[package]
name = "cargo-testjs"
version = "0.1.2"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
repository = "https://github.com/hajifkd/cargo-testjs"
keywords = ["emscripten", "javascript", "test", "cargo-subcommand", "cargo"]
license-file = "LICENSE"
readme = "README.md"
description = "Cargo extension to run tests by nodejs"

[dependencies]
toml = "0.3.1"
rustc-serialize = "0.3.22"
regex = "0.2.1"
ansi_term = "0.9.0"
